--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-  <title>simplestyle_4</title>
+  <title>Fair Splits - Team 30</title>
   <meta name="description" content="website description" />
   <meta name="keywords" content="website keywords, website keywords" />
   <meta http-equiv="content-type" content="text/html; charset=windows-1252" />
@@ -15,18 +15,18 @@
       <div id="logo">
         <div id="logo_text">
           <!-- class="logo_colour", allows you to change the colour of the text -->
-          <h1><a href="index.html">simple<span class="logo_colour">style_4</span></a></h1>
-          <h2>Simple. Contemporary. Website Template.</h2>
+          <h1><a href="index.html">Fair Splits<span class="logo_colour">Team 30</span></a></h1>
+          <h2>Sponsored by Santander Foundation</h2>
         </div>
       </div>
       <div id="menubar">
         <ul id="menu">
           <!-- put class="selected" in the li tag for the selected page - to highlight which page you're on -->
-          <li class="selected"><a href="index.html">Home</a></li>
-          <li><a href="examples.html">Examples</a></li>
-          <li><a href="page.html">A Page</a></li>
-          <li><a href="another_page.html">Another Page</a></li>
-          <li><a href="contact.html">Contact Us</a></li>
+          <li class="selected"><a href="index.html">Our Project</a></li>
+          <li><a href="examples.html">First Assessment</a></li>
+          <li><a href="page.html">Second Assessment</a></li>
+          <li><a href="another_page.html">Final Assessment</a></li>
+          <li><a href="contact.html">Our Team</a></li>
         </ul>
       </div>
     </div>
