--- a/index.html
+++ b/index.html
@@ -32,66 +32,31 @@
     </div>
     <div id="content_header"></div>
     <div id="site_content">
-      <div id="sidebar_container">
-        <div class="sidebar">
-          <div class="sidebar_top"></div>
-          <div class="sidebar_item">
-            <!-- insert your sidebar items here -->
-            <h3>Latest News</h3>
-            <h4>New Website Launched</h4>
-            <h5>January 1st, 2010</h5>
-            <p>2010 sees the redesign of our website. Take a look around and let us know what you think.<br /><a href="#">Read more</a></p>
-          </div>
-          <div class="sidebar_base"></div>
-        </div>
-        <div class="sidebar">
-          <div class="sidebar_top"></div>
-          <div class="sidebar_item">
-            <h3>Useful Links</h3>
-            <ul>
-              <li><a href="#">link 1</a></li>
-              <li><a href="#">link 2</a></li>
-              <li><a href="#">link 3</a></li>
-              <li><a href="#">link 4</a></li>
-            </ul>
-          </div>
-          <div class="sidebar_base"></div>
-        </div>
-        <div class="sidebar">
-          <div class="sidebar_top"></div>
-          <div class="sidebar_item">
-            <h3>Search</h3>
-            <form method="post" action="#" id="search_form">
-              <p>
-                <input class="search" type="text" name="search_field" value="Enter keywords....." />
-                <input name="search" type="image" style="border: 0; margin: 0 0 -9px 5px;" src="style/search.png" alt="Search" title="Search" />
-              </p>
-            </form>
-          </div>
-          <div class="sidebar_base"></div>
-        </div>
-      </div>
       <div id="content">
         <!-- insert the page content here -->
-        <h1>Welcome to the simplestyle_4 template</h1>
-        <p>This standards compliant, simple, fixed width website template is released as an 'open source' design (under a <a href="http://creativecommons.org/licenses/by/3.0">Creative Commons Attribution 3.0 Licence</a>), which means that you are free to download and use it for anything you want (including modifying and amending it). All I ask is that you leave the 'design from HTML5webtemplates.co.uk' link in the footer of the template, but other than that...</p>
-        <p>This template is written entirely in <strong>HTML5</strong> and <strong>CSS</strong>, and can be validated using the links in the footer.</p>
-        <p>You can view more free HTML5 web templates <a href="http://www.html5webtemplates.co.uk">here</a>.</p>
-        <p>This template is a fully functional 5 page website, with an <a href="examples.html">examples</a> page that gives examples of all the styles available with this design.</p>
-        <h2>Browser Compatibility</h2>
-        <p>This template has been tested in the following browsers:</p>
-        <ul>
-          <li>Internet Explorer 8</li>
-          <li>Internet Explorer 7</li>
-          <li>FireFox 3.5</li>
-          <li>Google Chrome 6</li>
-          <li>Safari 4</li>
-        </ul>
+        <h1>Welcome!</h1>
+        <p>The challenge for this year is going to be centered around financial wellbeing, sponsored by Santander Foundation. </p>
+        <p>Financial wellbeing is defined as the state in which a person or organization can smoothly manage its current financial obligations and have confidence in its financial future. This includes four elements:</p>
+        <ol>
+          <li>
+            <p>Day-to-day - smooth short-term finances to meet short-term needs</p>
+          </li>
+          <li>
+            <p>Resilience - absorb financial shocks</p>
+          </li>
+          <li>
+            <p>Goals - reach future goals</p>
+          </li>
+          <li>
+            <p>Confidence - feel secure and in control of finances</p>
+          </li>
+        </ol>
+        <p>Financial wellbeing depends on people and organizations acquiring a set of financial skills and knowledge (also known as financial literacy) that allows an individual to make informed and effective decisions with all their financial resources. This includes the ability to understand and effectively use various financial skills, including personal financial management, budgeting, saving, and investing. Financial literacy is fundamental to promoting equity, reducing inequalities, and leveraging a more just and fairer, and inclusive society that progresses without leaving people behind.</p>
+        <p>Our sponsor Santander Foundation is encouraging activities to promote financial well being and is interested in taking advantage of advanced interactive technologies and user-centered design approaches to leverage financial literacy and promote financial wellbeing. They have an extensive portfolio of online content, training programs and interactive tools that need to be adapted to specific target groups taking advantage of new interactive technologies. Additional contents and tools are also available from the national regulatory agencies such as the bank of Portugal and many others worldwide which you can research for inspiration.</p>
       </div>
     </div>
     <div id="content_footer"></div>
     <div id="footer">
-      <p><a href="index.html">Home</a> | <a href="examples.html">Examples</a> | <a href="page.html">A Page</a> | <a href="another_page.html">Another Page</a> | <a href="contact.html">Contact Us</a></p>
       <p>Copyright &copy; simplestyle_4 | <a href="http://validator.w3.org/check?uri=referer">HTML5</a> | <a href="http://jigsaw.w3.org/css-validator/check/referer">CSS</a> | <a href="http://www.html5webtemplates.co.uk">design from HTML5webtemplates.co.uk</a></p>
     </div>
   </div>
