--- a/index.html
+++ b/index.html
@@ -23,10 +23,10 @@
         <ul id="menu">
           <!-- put class="selected" in the li tag for the selected page - to highlight which page you're on -->
           <li class="selected"><a href="index.html">Our Project</a></li>
-          <li><a href="examples.html">First Assessment</a></li>
-          <li><a href="page.html">Second Assessment</a></li>
-          <li><a href="another_page.html">Final Assessment</a></li>
-          <li><a href="contact.html">Our Team</a></li>
+          <li><a href="firstAssessment.html">First Assessment</a></li>
+          <li><a href="secondAssessment.html">Second Assessment</a></li>
+          <li><a href="finalAssessment.html">Final Assessment</a></li>
+          <li><a href="ourTeam.html">Our Team</a></li>
         </ul>
       </div>
     </div>
