--- a/firstAssessment.html
+++ b/firstAssessment.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-  <title>simplestyle_4 - examples</title>
+  <title>Fair Splits - Team 30</title>
   <meta name="description" content="website description" />
   <meta name="keywords" content="website keywords, website keywords" />
   <meta http-equiv="content-type" content="text/html; charset=windows-1252" />
@@ -15,66 +15,45 @@
       <div id="logo">
         <div id="logo_text">
           <!-- class="logo_colour", allows you to change the colour of the text -->
-          <h1><a href="index.html">simple<span class="logo_colour">style_4</span></a></h1>
-          <h2>Simple. Contemporary. Website Template.</h2>
+          <h1><a href="index.html">Fair Splits<span class="logo_colour">Team 30</span></a></h1>
+          <h2>Sponsored by Santander Foundation</h2>
         </div>
       </div>
       <div id="menubar">
         <ul id="menu">
           <!-- put class="selected" in the li tag for the selected page - to highlight which page you're on -->
-          <li><a href="index.html">Home</a></li>
-          <li class="selected"><a href="examples.html">Examples</a></li>
-          <li><a href="page.html">A Page</a></li>
-          <li><a href="another_page.html">Another Page</a></li>
-          <li><a href="contact.html">Contact Us</a></li>
+          <li><a href="index.html">Our Project</a></li>
+          <li class="selected"><a href="firstAssessment.html">First Assessment</a></li>
+          <li><a href="secondAssessment.html">Second Assessment</a></li>
+          <li><a href="finalAssessment.html">Final Assessment</a></li>
+          <li><a href="ourTeam.html">Our Team</a></li>
         </ul>
       </div>
     </div>
     <div id="content_header"></div>
     <div id="site_content">
-      <div id="sidebar_container">
-        <div class="sidebar">
-          <div class="sidebar_top"></div>
-          <div class="sidebar_item">
-            <!-- insert your sidebar items here -->
-            <h3>Latest News</h3>
-            <h4>New Website Launched</h4>
-            <h5>January 1st, 2010</h5>
-            <p>2010 sees the redesign of our website. Take a look around and let us know what you think.<br /><a href="#">Read more</a></p>
-          </div>
-          <div class="sidebar_base"></div>
-        </div>
-        <div class="sidebar">
-          <div class="sidebar_top"></div>
-          <div class="sidebar_item">
-            <h3>Useful Links</h3>
-            <ul>
-              <li><a href="#">link 1</a></li>
-              <li><a href="#">link 2</a></li>
-              <li><a href="#">link 3</a></li>
-              <li><a href="#">link 4</a></li>
-            </ul>
-          </div>
-          <div class="sidebar_base"></div>
-        </div>
-        <div class="sidebar">
-          <div class="sidebar_top"></div>
-          <div class="sidebar_item">
-            <h3>Search</h3>
-            <form method="post" action="#" id="search_form">
-              <p>
-                <input class="search" type="text" name="search_field" value="Enter keywords....." />
-                <input name="search" type="image" style="border: 0; margin: 0 0 -9px 5px;" src="style/search.png" alt="Search" title="Search" />
-              </p>
-            </form>
-          </div>
-          <div class="sidebar_base"></div>
-        </div>
-      </div>
       <div id="content">
         <!-- insert the page content here -->
-        <h1>Examples</h1>
-        <p>This page contains examples of all the styled elements available as part of this design. Use this page for reference, whilst you build your website.</p>
+        <h1>Video Presentation</h1>
+        <iframe src="https://drive.google.com/file/d/1rKpmOxe28UoOj830V0K_h-1Vn6bc-LKD/preview" width="840" height="680" allow="autoplay"></iframe>
+        <p>Can't see the video presentation? <a href="https://drive.google.com/file/d/1rKpmOxe28UoOj830V0K_h-1Vn6bc-LKD/preview">Click here!</a></p>
+
+        <h1>Materials:</h1>
+        <ul>
+          <li><a href="https://drive.google.com/file/d/1WBm0xcM8DEx04Ztvy6LjJeej4MVbJ8Pi/view?usp=sharing">Hunt Statement</a></li>
+          <li><a href="https://drive.google.com/file/d/1i_OX2c3VJF-tNA8HiNEX19FovpOSBIAe/view?usp=sharing">Research Plan</a></li>
+          <li><a href="https://drive.google.com/drive/folders/1ne8PvLu-wV-x8nBP9-cypRqNNj-lI4Ph?usp=sharing">Interviews</a></li>
+          
+          <li><a href="https://drive.google.com/file/d/1Xk3OT8Y06lGIAe_bC6JmjmYOv3wjeFXW/view?usp=sharing">Personas</a></li>
+          <li><a href="https://drive.google.com/file/d/1s-uYeCTesbZL5mBmgU_yq7qUqtNFmSdt/view?usp=sharing">CI Model</a></li>
+          <li><a href="https://drive.google.com/drive/folders/18tbtpvZFl2rGLvIsh_jfLtnWeW5JXdZK?usp=sharing">Storyboards</a></li>
+          <li><a href="https://drive.google.com/drive/folders/1uvhroMhlGVcSyw-1mOvyc-OafZafvpJg?usp=sharing">Thematic Analysis</a></li>
+
+          <li><a href="https://drive.google.com/drive/folders/1sTQ-hK2ZutY6qrsM_TF6cIMpivrirqw5?usp=sharing">Ideation</a></li>
+          <li><a href="https://drive.google.com/drive/folders/1VmU_oS9ZNQjDptDS8Ixu4sHlRTzCkJiK?usp=sharing">Other Components</a></li>
+        </ul>
+
+        <!--<p>This page contains examples of all the styled elements available as part of this design. Use this page for reference, whilst you build your website.</p>
         <h2>Headings</h2>
         <p>These are the different heading formats:</p>
         <h1>Heading 1</h1>
@@ -139,12 +118,11 @@
             <p><span>Dropdown list example</span><select id="id" name="name"><option value="1">Example 1</option><option value="2">Example 2</option></select></p>
             <p style="padding-top: 15px"><span>&nbsp;</span><input class="submit" type="submit" name="name" value="button" /></p>
           </div>
-        </form>
+        </form>-->
       </div>
     </div>
     <div id="content_footer"></div>
     <div id="footer">
-      <p><a href="index.html">Home</a> | <a href="examples.html">Examples</a> | <a href="page.html">A Page</a> | <a href="another_page.html">Another Page</a> | <a href="contact.html">Contact Us</a></p>
       <p>Copyright &copy; simplestyle_4 | <a href="http://validator.w3.org/check?uri=referer">HTML5</a> | <a href="http://jigsaw.w3.org/css-validator/check/referer">CSS</a> | <a href="http://www.html5webtemplates.co.uk">design from HTML5webtemplates.co.uk</a></p>
     </div>
   </div>
