--- a/firstAssessment.html
+++ b/firstAssessment.html
@@ -34,7 +34,7 @@
     <div id="site_content">
       <div id="content">
         <!-- insert the page content here -->
-        <h1>Video Presentation</h1>
+        <h1 style="text-align:center">Video Presentation</h1>
         <iframe src="https://drive.google.com/file/d/1rKpmOxe28UoOj830V0K_h-1Vn6bc-LKD/preview" width="840" height="680" allow="autoplay"></iframe>
         <p>Can't see the video presentation? <a href="https://drive.google.com/file/d/1rKpmOxe28UoOj830V0K_h-1Vn6bc-LKD/preview">Click here!</a></p>
         <p>You can find the presentation slides <a href="https://drive.google.com/file/d/1GAG4aRdJE9DyMRG7undo9ezVvraAmhO0/view?usp=sharing">here!</a></p>
