--- a/secondAssessment.html
+++ b/secondAssessment.html
@@ -42,12 +42,12 @@
         <h1>Materials:</h1>
         <ul>
           <li><a href="https://drive.google.com/file/d/1QoDlUgDjMY2m13bhJIkFRJjsm9wF2l-m/view?usp=sharing">Tasks</a></li>
-          <li><a href="https://drive.google.com/file/d/1i_OX2c3VJF-tNA8HiNEX19FovpOSBIAe/view?usp=sharing">User Evaluations</a></li>
+          <li><a href="https://drive.google.com/file/d/1AKBytCtF9lM9cdwIHat0ezTPGIsb88D5/view?usp=sharing">User Evaluations</a></li>
           
           <li><a href="https://drive.google.com/drive/folders/1KbDjXitRLL_QgrirnCaUGXn7B6M9YVeY?usp=sharing">Other Components</a></li>
         </ul>
 
-        <h1 style="text-align:center">Mid Fidelity Prototype</h1>
+        <h1>Mid Fidelity Prototype</h1>
         <iframe style="border: 1px solid rgba(0, 0, 0, 0.1);" width="800" height="450" src="https://www.figma.com/embed?embed_host=share&url=https%3A%2F%2Fwww.figma.com%2Ffile%2FOFdilw3oqXDK4msyCwtlRv%2FOur-Prototypes%3Fnode-id%3D0%253A1%26t%3DAmv65WnmX7rJQR4e-1" allowfullscreen></iframe>
       
       </div>
