--- a/secondAssessment.html
+++ b/secondAssessment.html
@@ -48,7 +48,7 @@
         </ul>
 
         <h1>Low Fidelity Prototype</h1>
-        <a href="https://balsamiq.cloud/sfsc6jq/pqu6ad5/rBC68">Here!</a>
+        <a href="https://balsamiq.cloud/sfsc6jq/pqu6ad5">Here!</a>
 
         <h1>Mid Fidelity Prototype</h1>
         <iframe style="border: 1px solid rgba(0, 0, 0, 0.1);" width="800" height="450" src="https://www.figma.com/embed?embed_host=share&url=https%3A%2F%2Fwww.figma.com%2Ffile%2FOFdilw3oqXDK4msyCwtlRv%2FOur-Prototypes%3Fnode-id%3D0%253A1%26t%3DAmv65WnmX7rJQR4e-1" allowfullscreen></iframe>
