--- a/finalAssessment.html
+++ b/finalAssessment.html
@@ -49,8 +49,8 @@
         </ul>
 
         <h1>High Fidelity Prototype</h1>
-        
-        <iframe style="border: 1px solid rgba(0, 0, 0, 0.1);" width="800" height="450" src="https://www.figma.com/embed?embed_host=share&url=https%3A%2F%2Fwww.figma.com%2Ffile%2F8a203ptEJaWKyxVnucwiOJ%2FHigh-fidelity-prototype%3Fnode-id%3D115%253A1695%26t%3DOU1I30H6y2FGu1Oy-1" allowfullscreen></iframe>
+
+        <iframe style="border: 1px solid rgba(0, 0, 0, 0.1);" width="800" height="450" src="https://www.figma.com/embed?embed_host=share&url=https%3A%2F%2Fwww.figma.com%2Ffile%2F8a203ptEJaWKyxVnucwiOJ%2FHigh-fidelity-prototype%3Fnode-id%3D0%253A1%26t%3DOU1I30H6y2FGu1Oy-1" allowfullscreen></iframe>
 
 
       </div>
