--- a/finalAssessment.html
+++ b/finalAssessment.html
@@ -46,6 +46,7 @@
         </ul>
         <h1>High Fidelity Prototype</h1>
         <iframe style="border: 1px solid rgba(0, 0, 0, 0.1);" width="800" height="450" src="https://www.figma.com/embed?embed_host=share&url=https%3A%2F%2Fwww.figma.com%2Ffile%2F8a203ptEJaWKyxVnucwiOJ%2FHigh-fidelity-prototype%3Fnode-id%3D0%253A1%26t%3DOU1I30H6y2FGu1Oy-1" allowfullscreen></iframe>
+        <p>Want to test our prototype? Test it <a href="https://www.figma.com/proto/8a203ptEJaWKyxVnucwiOJ/High-fidelity-prototype?node-id=115%3A1695&scaling=scale-down&page-id=0%3A1&starting-point-node-id=115%3A1695&show-proto-sidebar=1">here!</a></p>
       </div>
     </div>
     <div id="content_footer"></div>
