--- a/finalAssessment.html
+++ b/finalAssessment.html
@@ -42,7 +42,8 @@
         <a href="https:&#x2F;&#x2F;www.canva.com&#x2F;design&#x2F;DAFXYvnusJU&#x2F;view?utm_content=DAFXYvnusJU&amp;utm_campaign=designshare&amp;utm_medium=embeds&amp;utm_source=link" target="_blank" rel="noopener">more detailed here!</a>
         <h1>Materials:</h1>
         <ul>
-          <li><a href="https://drive.google.com/file/d/14yvn1dwkby_eRLxinMyqP9RY5ZltQ3G2/view?usp=sharing">User Evaluations</a></li>  
+          <li><a href="https://drive.google.com/file/d/14yvn1dwkby_eRLxinMyqP9RY5ZltQ3G2/view?usp=sharing">User Evaluations</a></li> 
+          <li><a href="https://drive.google.com/file/d/1nlT4WasaAhEvUW-JmNufKAjsdArHOGo0/view?usp=sharing">Other Components</a></li> 
         </ul>
         <h1>High Fidelity Prototype</h1>
         <iframe style="border: 1px solid rgba(0, 0, 0, 0.1);" width="800" height="450" src="https://www.figma.com/embed?embed_host=share&url=https%3A%2F%2Fwww.figma.com%2Ffile%2F8a203ptEJaWKyxVnucwiOJ%2FHigh-fidelity-prototype%3Fnode-id%3D0%253A1%26t%3DOU1I30H6y2FGu1Oy-1" allowfullscreen></iframe>
